GIA-168 Migrate application to Spring Boot - Spring Data JPA migration